@@ -1,4 +1,8 @@
-<!-- wp:post-author {"showAvatar":false,"byline":"","className":"me-3"} /-->
-<!-- wp:post-date {"className":"me-3"} /-->
-<!-- wp:post-terms {"term":"category","className":"me-3"} /-->
-<!-- wp:post-comments-link /-->
+<!-- wp:group {"style":{"spacing":{"padding":{"bottom":"1rem"}}},"layout":{"type":"flex","allowOrientation":false,"justifyContent":"left"},"customCSSId":"7620b8cs-1da7-4476-84f2-edr3f0a84f8b"} -->
+<div class="wp-block-group" style="padding-bottom:1rem">
+    <!-- wp:post-author {"showAvatar":false,"byline":"","className":"me-3"} /-->
+    <!-- wp:post-date {"className":"me-3"} /-->
+    <!-- wp:post-terms {"term":"category","className":"me-3"} /-->
+    <!-- wp:post-comments-link /-->
+</div>
+<!-- /wp:group -->
