@@ -8,7 +8,7 @@
         <!-- wp:post-template -->
         <!-- wp:post-featured-image {"isLink":true,"className":"mb-3 mb-md-0"} /-->
         <!-- wp:post-title {"level":3,"isLink":true} /-->
-        <!-- wp:template-part {"slug":"entry-meta","className":"d-flex flex-wrap align-items-center mb-3"} /-->
+        <!-- wp:template-part {"slug":"entry-meta"} /-->
         <!-- wp:post-excerpt {"moreText":"Continue reading","excerptLength":10,"textColor":"secondary"} /-->
         <!-- /wp:post-template -->
         <!-- wp:query-pagination -->
