@@ -8,7 +8,7 @@
             <!-- wp:group {"tagName":"main","layout":{"inherit":false}} -->
             <main class="wp-block-group">
                 <!-- wp:post-title /-->
-                <!-- wp:template-part {"slug":"entry-meta","className":"d-flex flex-wrap align-items-center mb-3"} /-->
+                <!-- wp:template-part {"slug":"entry-meta"} /-->
                 <!-- wp:post-content /-->
                 <!-- wp:post-terms {"term":"post_tag","className":"d-block mb-3"} /-->
                 <!-- wp:columns {"className":"mb-3"} -->
