@@ -2,9 +2,11 @@ v5.2.2
 - Updated - Gutenberg remove from theme activation check - WP does that automatically until 5.9 for FSE themes
 - Updated - Pattern to use spacing attributes instead of BootStrap's classes
 - Updated - Reduce WooCoomerce starter support to minimum / eventually all support extensions will be moved to own plugin
+- Updated - Duotone support transparency
 - Removed - Widgets - sidebar registration
 - Removed - Comment Walker in favor of Gutenberg block
 - Removed - comments.php
+- Added - Gutenberg Flex layout support
 - Added - Gutenberg Comment Template/Form blocks
 - Added - Site logo block wrapper (move custom logo filter to it and added styles)
 
